2007-05-13 Anatoly Sokolov <aesok@post.ru>

	* configure.ac: Add tests for the ATmega8HVA/16HVA support.
	* devtools/gen-avr-lib-tree.sh: Add support for ATmega8HVA/16HVA.
	* include/avr/io.h: (Ditto.).
	* include/avr/wdt.h: (Ditto.).
	* include/avr/iom8hva.h: New file.
	* include/avr/iom16hva.h: New file.
	* include/avr/iomxxhva.h: New file.
	* include/avr/Makefile.am: Include new files.
	* doc/api/main_page.dox: Document support for ATmega8HVA/16HVA.
	* doc/api/using-tools.dox: (Ditto.)

2007-05-12  Anatoly Sokolov <aesok@post.ru>

	* include/avr/iousbxx2.h: Change PORTxy to Pxy.

2007-05-09 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix bug #19445: _malloc_heap_end does not follow _heap_end on m2561
	* doc/api/malloc-std.fig: Clearly distinguish library-internal
	variables from absolute symbols added by the linker.
	* doc/api/malloc-x1.fig: (Ditto.)
	* doc/api/malloc-x2.fig: (Ditto.)

2007-05-09 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix bug #19841: Error building 1.4 HEAD: undefined reference to 'exit'
	* doc/api/Makefile.am (DEMO_LIBS): add exit.o to the list of files to
	link the demo against.

2007-05-08 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix bug #19050: gcrt1.S should call main rather than jumping to it
	* crt1/gcrt1.S: call main() rather than jumping to it, and then
	jump to exit().

2007-05-07  Anatoly Sokolov <aesok@post.ru>

	* configure.ac: Add 'avr25' architecture.
	* devtools/gen-avr-lib-tree.sh (AVR_ARH_INFO): Ditto.
	(AVR25_DEV_INFO): New.
	* doc/api/using-tools.dox: Document 'avr25'.

2007-05-06  Eric B. Weddington <eweddington@cso.atmel.com>

	Fix bug #19666:
	* include/avr/io90pwmx.h: Add ADHSM, ADTS3 bits to the ADCSRB register.

2007-05-05  Eric B. Weddington <eweddington@cso.atmel.com>

	* doc/examples/asmdemo/asmdemo.dox: Fix HTML code in source code links.

2007-05-05  Eric B. Weddington <eweddington@cso.atmel.com>

	Fix bug #19495.
	* include/avr/interrupt.h: Fix doxygen stuff, whitespace, remove unused
	C++ stuff at the end.